--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.8.1",
     "redis": "^2.4.1",
     "socket.io": "^1.3.7",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "sys": "0.0.1"
   }
 }
